--- a/Analisador/.settings/org.eclipse.core.resources.prefs
+++ b/Analisador/.settings/org.eclipse.core.resources.prefs
@@ -7,6 +7,7 @@ encoding//app/templates/analise.html=UTF-8
 encoding//app/templates/analise_especifica_palavra.html=UTF-8
 encoding//app/templates/menu.html=UTF-8
 encoding//app/templates/principal.html=UTF-8
+encoding//teste/__init__.py=utf-8
 encoding//teste/teste.py=utf-8
 encoding//verifica_artigo/__init__.py=utf-8
 encoding//verifica_artigo/busca_artigos.py=utf-8
